[package]
name = "fluvial"
version = "0.3.3"
authors = ["Alex Jago"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Visualise stop-by-stop passenger patronage over routes."
repository = "https://github.com/alexjago/fluvial"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rust-hsluv = "0.1.4"
clap = "2.33"
serde_rusqlite = "0.28"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
ansi-escapes = "0.1"
csv = "1.1"
tempfile = "3.1"
reqwest = {version = "0.11", features = ["blocking", "gzip", "brotli", "deflate"] }
zip = "0.5"

[dependencies.rusqlite]
version = "0.26"
features = ["bundled", "csvtab"]